--- a/src/GenerateReports/packages.config
+++ b/src/GenerateReports/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Control.Reactive" version="3.4.1" targetFramework="net461" />
   <package id="FSharp.Data.SqlClient" version="1.8.2" targetFramework="net461" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
 </packages>
