--- a/src/GenerateReports/GenerateReports.fsproj
+++ b/src/GenerateReports/GenerateReports.fsproj
@@ -67,6 +67,7 @@
     <Content Include="packages.config" />
     <Compile Include="Types.fs" />
     <Compile Include="Persistence.fs" />
+    <Compile Include="Models.fs" />
     <Compile Include="Processing.fs" />
     <Compile Include="Output.fs" />
     <Compile Include="Program.fs" />
