--- a/src/GenerateReports/packages.config
+++ b/src/GenerateReports/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="FSharp.Control.Reactive" version="3.4.1" targetFramework="net461" />
   <package id="FSharp.Data.SqlClient" version="1.8.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
+  <package id="RazorEngine" version="3.9.0" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net461" />
