Add statement stops report

--- a/src/GenerateReports/GenerateReports.fsproj
+++ b/src/GenerateReports/GenerateReports.fsproj
@@ -68,6 +68,7 @@
     <EmbeddedResource Include="Templates\Report.css" />
     <EmbeddedResource Include="Templates\TransactionListing.html" />
     <EmbeddedResource Include="Templates\StatementPositions.html" />
+    <EmbeddedResource Include="Templates\StatementStops.html" />
     <Compile Include="Types.fs" />
     <Compile Include="Persistence.fs" />
     <Compile Include="Models.fs" />
