--- a/src/GenerateReports/GenerateReports.fsproj
+++ b/src/GenerateReports/GenerateReports.fsproj
@@ -66,7 +66,7 @@
     <None Include="App.config" />
     <Content Include="packages.config" />
     <EmbeddedResource Include="Templates\Report.css" />
-    <EmbeddedResource Include="Templates\TransactionListing.html" />
+    <EmbeddedResource Include="Templates\StatementTransactions.html" />
     <EmbeddedResource Include="Templates\StatementPositions.html" />
     <EmbeddedResource Include="Templates\StatementStops.html" />
     <Compile Include="Types.fs" />
