Use different naming for intermediate data

--- a/src/GenerateReports/GenerateReports.fsproj
+++ b/src/GenerateReports/GenerateReports.fsproj
@@ -66,15 +66,15 @@
     <None Include="App.config" />
     <Content Include="packages.config" />
     <EmbeddedResource Include="Templates\Report.css" />
-    <EmbeddedResource Include="Templates\StatementTransactions.html" />
-    <EmbeddedResource Include="Templates\StatementStops.html" />
-    <EmbeddedResource Include="Templates\StatementPositions.html" />
+    <EmbeddedResource Include="Templates\IntermediateTransactions.html" />
+    <EmbeddedResource Include="Templates\IntermediateStops.html" />
+    <EmbeddedResource Include="Templates\IntermediatePositions.html" />
     <Compile Include="Types.fs" />
     <Compile Include="Persistence.fs" />
     <Compile Include="Processing.fs" />
-    <Compile Include="Reports.StatementTransactions.fs" />
-    <Compile Include="Reports.StatementStops.fs" />
-    <Compile Include="Reports.StatementPositions.fs" />
+    <Compile Include="Reports.IntermediateTransactions.fs" />
+    <Compile Include="Reports.IntermediateStops.fs" />
+    <Compile Include="Reports.IntermediatePositions.fs" />
     <Compile Include="Output.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
